--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Somos S/A - Debata. Colabore. Crie. Construa">
+    <meta name="description" content="Somos S/A - Debata. Colabore. Crie. Construa.">
     <title>Somos S/A - Pesquisa de Opinião</title>
     <link rel="stylesheet" href="style.css">
 </head>
