--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Header -->
         <header>
             <img src="logo.png" alt="Somos S/A" class="logo">
-            <p class="tagline">Transformando sua cidade através de investimentos comunitários</p>
+            <p class="tagline"> Plataforma de Coordenação Econômica para Criação de Empresas </p>
         </header>
 
         <!-- Hero Section -->
